--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,12 @@
 services:
   devops:
-    image: craftech-terraform-terragrunt
+    image: craftech-terraform-terragrunt:latest
     build:
       context: .
       dockerfile: Dockerfile
       args:
         TERRAFORM_VERSION: "1.5.5-1"  # Set desired Terraform version
-        TERRAGRUNT_VERSION: "0.67.16"  # Set desired Terragrunt version
+        TERRAGRUNT_VERSION: "0.70.4"  # Set desired Terragrunt version
         KUBECTL_VERSION: "v1.30.5"  # Set desired kubectl version
         GIT_USER_EMAIL: "agustin@craftech.io"
         GIT_USER_NAME: "agustinmontero"
